Implement RBAC system
- Add function decorators for authentication
- Update Unit Tests
- Fix bugs
