# api/users/routes.py
@@ -6,10 +6,12 @@ from werkzeug.security import generate_password_hash
 from werkzeug.exceptions import BadRequest
 from flask_jwt_extended import jwt_required, get_jwt_identity
 from helpers.common_responses import invalidJWT, noUser, noUserID, notAuthorized, noJSON, invalidJSON
+from helpers.decorators import permission_required, admin_required
 
+# Create blueprint
 users_bp = Blueprint('users', __name__)
 
-
+# Callback function if a valid but expired JWT is recieved
 @jwt.expired_token_loader
 def expired_token_callback(header, payload):
     return jsonify({
@@ -19,43 +21,31 @@ def expired_token_callback(header, payload):
     }), 401
 
 
+# Retrieve all users
 @users_bp.route("", methods=["GET"])
 @jwt_required()
+@admin_required("can_read_users")
 def read_all():
-    current_user = get_jwt_identity()
-    cuser = User.query.filter(User.username == current_user['username']).one_or_none()
-
-    if not cuser.admin:
-        return notAuthorized()
-
     users = User.query.filter(User.admin == False).all()
-    return user_schema.dump(users, many=True)
+    return user_schema_private.dump(users, many=True)
 
 
+# Retrieve one user
 @users_bp.route("/<int:user_id>", methods=["GET"])
 @jwt_required()
+@permission_required("can_read_users")
 def read_one(user_id):
-    current_user = get_jwt_identity()
-    cuser = User.query.filter(User.username == current_user['username']).one_or_none()
-
-    if not cuser:
-        return invalidJWT()
-
     user = User.query.filter(User.id == user_id).one_or_none()
     if user is None:
         return noUserID(user_id)
 
-    if cuser.admin:
-        return user_schema.dump(user)
-
-    if user.id != cuser.id:
-        return notAuthorized()
-
     return user_schema_private.dump(user)
 
 
+# Update user password
 @users_bp.route("/<int:user_id>", methods=["PUT"])
 @jwt_required()
+@permission_required("can_update_users")
 def update(user_id):
     try:
         user = request.get_json()
@@ -69,45 +59,28 @@ def update(user_id):
     except KeyError:
         return invalidJSON()
 
-    current_user = get_jwt_identity()
-    cuser = User.query.filter(User.username == current_user['username']).one_or_none()
     existing_user = User.query.filter(User.id == user_id).one_or_none()
-
-    if not cuser:
-        return invalidJWT()
 
     if existing_user is None:
         return noUserID(user_id)
-
-    if user_id != cuser.id and not cuser.admin:
-        return notAuthorized()
 
     update_user = user_schema.load(user, session=db.session)
     existing_user.password = generate_password_hash(update_user.password)
     db.session.merge(existing_user)
     db.session.commit()
 
-    if cuser.admin:
-        return user_schema.dump(existing_user), 200
-
     return user_schema_private.dump(existing_user), 200
 
 
+# Delete user
 @users_bp.route("/<int:user_id>", methods=["DELETE"])
 @jwt_required()
+@permission_required("can_delete_users")
 def delete(user_id):
-    current_user = get_jwt_identity()
-    cuser = User.query.filter(User.username == current_user['username']).one_or_none()
     existing_user = User.query.filter(User.id == user_id).one_or_none()
-
-    if not cuser:
-        return invalidJWT()
 
     if existing_user is None:
         return noUserID(user_id)
-
-    if existing_user.id != cuser.id and not cuser.admin:
-        return notAuthorized()
 
     db.session.delete(existing_user)
     db.session.commit()
