# helpers/input_validator.py
@@ -1,12 +1,12 @@
 from string import ascii_letters, digits
 import toml
 
-# Load the TOML file
+# Load config from config file
 with open('configuration/config.toml', 'r') as file:
     config = toml.load(file)
 
 reserved_usernames = config['users']['reserved_usernames']
-elevated_usernames = config['users']['elevated_usernames']
+elevated_usernames = config['users']['elevated_users']
 
 
 def password_is_valid(password):
@@ -33,6 +33,3 @@ def username_is_valid(username):
 
 def username_is_reserved(username):
     return username in reserved_usernames
-
-def username_is_elevated(username):
-    return username in elevated_usernames
